Fix input padding on safari

--- a/src/sections/Home/Newsletter/Newsletter.module.scss
+++ b/src/sections/Home/Newsletter/Newsletter.module.scss
@@ -2,7 +2,7 @@
   @media not all and (min-resolution: 0.001dpcm) {
     @supports (-webkit-appearance: none) {
       input {
-        @apply lg:pl-28;
+        @apply pl-20 lg:pl-28;
       }
     }
   }
